[gd_scene load_steps=3 format=3 uid="uid://du2q4q7yj6ktd"]

[ext_resource type="Script" path="res://Scoreboard.gd" id="1_y4qr1"]

[sub_resource type="LabelSettings" id="LabelSettings_jmtna"]
font_size = 25

[node name="Scoreboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y4qr1")

[node name="LabelOutput" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -160.0
offset_right = 192.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_jmtna")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = -306.0
offset_bottom = -196.0
grow_horizontal = 2
grow_vertical = 2
text = "Add or Subtract Point:"
label_settings = SubResource("LabelSettings_jmtna")
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -864.0
offset_right = -544.0
offset_bottom = 128.0
grow_horizontal = 0

[node name="Update" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -128.0
offset_right = 320.0
grow_vertical = 0
text = "Update"

[node name="Reset" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -128.0
offset_right = 160.0
grow_horizontal = 2
grow_vertical = 0
text = "Reset"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -128.0
grow_horizontal = 0
grow_vertical = 0
text = "Quit"

[connection signal="pressed" from="Update" to="." method="_on_update_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
